Started FileFormatter class

--- a/ProjectCode/CodeToUML/CodeToUML/CodeToUML.vcxproj.filters
+++ b/ProjectCode/CodeToUML/CodeToUML/CodeToUML.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="CodeToUML.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileFormatter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileFormatter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
