--- a/ProjectCode/CodeToUML/CodeToUML/CodeToUML.vcxproj
+++ b/ProjectCode/CodeToUML/CodeToUML/CodeToUML.vcxproj
@@ -139,8 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FileFormatterTest.cpp" />
     <ClCompile Include="FileFormatter.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileFormatter.h" />
